deploy/dev/dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-api-gw-service
  namespace: pluto
spec:
  type: ClusterIP
  selector:
    app: dev-api-gw
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
